fix checkout form on mobile

--- a/pages/checkout/Checkout.module.scss
+++ b/pages/checkout/Checkout.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 185px;
+    margin: 15px;
     // height: 100vh;
 
     .heading {
@@ -26,7 +27,6 @@
             flex-direction: column;
             margin-bottom: 28px;
 
-
             label {
                 color: #474574;
                 font-family: Montserrat;
@@ -39,13 +39,15 @@
             input[type="text"],
             input[type="email"] {
                 height: 45px;
-                width: 243px;
+                // width: 243px;
+                width: 100%;
                 background: #DBDBE7;
                 color: #474574;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
                 @media (min-width: 768px) {
-                    width: 400px;
+                    // width: 400px;
+                    width: 100%;
                 }
 
                 @media (min-width: 1024px) {
